<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/root_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.044444446" />

    <android.support.constraint.Guideline
        android:id="@+id/root_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95555556" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthenticationTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@+id/root_left"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <LinearLayout
        android:id="@+id/layout_inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/root_left"
        app:layout_constraintRight_toLeftOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_rut"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rut">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/rut_input"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890kK"
                android:maxLength="9" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_document"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:hint="@string/document_number">

            <EditText
                android:id="@+id/number_input"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890a"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        style="@style/FloatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/layout_inputs" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button_disable"
        style="@style/FloatingActionButtonDisableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/layout_inputs" />

    <TextView
        style="@style/AuthenticationInfoBottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/conditions_accept"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>