<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/root_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.044444446" />

    <android.support.constraint.Guideline
        android:id="@+id/root_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95555556" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthenticationTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/create_your_password"
        app:layout_constraintStart_toStartOf="@+id/root_left"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/root_left"
        app:layout_constraintRight_toLeftOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pass1"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password1"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pass2"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:hint="@string/repeat_password">

            <EditText
                android:id="@+id/password2"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/passErrorNotEquals"
        style="@style/AuthErrorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contraseñas no coinciden"
        app:layout_constraintStart_toStartOf="@+id/root_left"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        style="@style/FloatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button_disable"
        style="@style/FloatingActionButtonDisableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="102dp"
        app:layout_constraintEnd_toStartOf="@+id/root_right"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />


</android.support.constraint.ConstraintLayout>